[pom] unify example project names in poms, add name to sorcer-rio module

--- a/examples/ex0/ex0-cfg/pom.xml
+++ b/examples/ex0/ex0-cfg/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>ex0-cfg</artifactId>
-    <name>SORCER :: examples :: ex0 :: config</name>
+    <name>SORCER examples :: ex0 :: config</name>
 
     <dependencies>
         <dependency>
