--- a/examples/ex6/ex6-cfg-divider/pom.xml
+++ b/examples/ex6/ex6-cfg-divider/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>ex6-cfg-divider</artifactId>
-    <name>SORCER :: examples :: ex6 :: divider config</name>
+    <name>SORCER examples :: ex6 :: divider config</name>
 
     <dependencies>
         <dependency>
