--- a/examples/ex2/ex2-cfg2/pom.xml
+++ b/examples/ex2/ex2-cfg2/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>ex2-cfg2</artifactId>
-    <name>SORCER :: examples :: ex2 :: config2</name>
+    <name>SORCER examples :: ex2 :: config2</name>
 
     <dependencies>
         <dependency>
