Many fixes in examples. testExamples adjusted to new booting. Added provisioning problems handling to space dispatchers - but still some entries are left over in the space

--- a/configs/sos-providers/jobber.config
+++ b/configs/sos-providers/jobber.config
@@ -28,7 +28,7 @@ sorcer.core.provider.ServiceProvider {
     exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
     
  	// Exertion Space (JavaSpaces configuration)
-    spaceEnabled = false;
+    spaceEnabled = true;
     		
     iconName="sorcer-ico.png";
 }
