--- a/examples/ex6/ex6-cfg-subtractor/src/main/resources/subtractor-prv.config
+++ b/examples/ex6/ex6-cfg-subtractor/src/main/resources/subtractor-prv.config
@@ -11,18 +11,18 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
 import sorcer.core.provider.ui.*;
-import sorcer.ex5.provider.*;
+import sorcer.arithmetic.provider.*;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
 		name = "Subtractor";
 		description = "Subtractor - bean provider";
 		location = "Sorcersoft.com Lab";
-		publishedInterfaces = new Class[] { sorcer.ex5.provider.Subtractor.class };
+		publishedInterfaces = new Class[] { sorcer.arithmetic.provider.Subtractor.class };
 		
 		// add service UI
 		//entries = new Entry[] { ArithmeticUI.getUIDescriptor(),  
-			//new Comment("It uses sorcer.ex5.provider.Arithmometer for bean implementation") };
+			//new Comment("It uses sorcer.arithmetic.provider.Arithmometer for bean implementation") };
 
 		spaceEnabled = true;
 		workerTransactional = true;
@@ -31,7 +31,7 @@ sorcer.core.provider.ServiceProvider {
 		providerIdPersistent = false;
 		
 		// service beans	
-		beanClasses = new Class[] { sorcer.ex5.provider.SubtractorImpl.class };
+		beanClasses = new Class[] { sorcer.arithmetic.provider.SubtractorImpl.class };
 		
 		iconName="sorcer.jpg";
 }
