--- a/examples/ex5/ex5-prv/src/main/resources/config/start-all-beans.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/start-all-beans.config
@@ -26,7 +26,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}config${/}arithmetic-all-beans.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}arithmetic-bean.config" }
         )
     };
 }
