--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <v.slf4j>1.7.5</v.slf4j>
         <v.junit>4.11</v.junit>
         <v.logback>1.0.11</v.logback>
+        <v.plexus>3.0.15</v.plexus>
     </properties>
 
 	<modules>
