--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,11 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.4</version>
             </dependency>
+            <dependency>
+                <groupId>com.sleepycat</groupId>
+                <artifactId>je</artifactId>
+                <version>${v.sleepycat}</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
