--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -23,7 +23,7 @@
         <v.jini>2.2.1</v.jini>
         <v.blitz>2.2.0</v.blitz>
         <v.sleepycat>4.1.21</v.sleepycat>
-        <v.rio>5.0-M4-sorcer3</v.rio>
+        <v.rio>5.0-M4-S4</v.rio>
         <v.groovy>2.1.3</v.groovy>
         <v.sigar>1.6.4</v.sigar>
         <v.lockmgr>0.2.sorcer2</v.lockmgr>
