add exerter-prv to distribution

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -69,6 +69,11 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>exerter-prv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>exertmonitor-prv</artifactId>
             <version>${project.version}</version>
         </dependency>
