move sos-env classes to sorcer-api; move Installer classes to sos-boot

--- a/configs/jini/configs/start-generic.config
+++ b/configs/jini/configs/start-generic.config
@@ -17,7 +17,7 @@ com.sun.jini.start {
     private static classpath =  ConfigUtil.concat(new Object[] {
     	home, fs, "lib", fs, "river", fs, "${impl.jar}", ps,
     	home, fs, "lib", fs, "river", fs, "jsk-lib.jar", ps,
-    	home, fs, "lib", fs, "sorcer",fs, "sos-env.jar", ps,
+    	home, fs, "lib", fs, "sorcer",fs, "sorcer-api.jar", ps,
     	home, fs, "lib", fs, "sorcer",fs, "sos-platform.jar"
     	});
     	
