--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -17,7 +17,7 @@
 ## Possible ways of specifying libraries
 ## load mvn://org.sorcersoft.sorcer:ex6-api
 ## load mvn://org.sorcersoft.sorcer:ex6-api@192.168.0.15:8000
-## load http://192.168.0.15:9000/sorcer/sos-env.jar
+## load http://192.168.0.15:9000/sorcer/sorcer-api.jar
 ## load file://!{user.home}/.nsh/lib/*.jar
 
 ## You can also specify the codebase that will be shared for all scripts that you invoke, however,
