--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -23,7 +23,7 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>sos-env</artifactId>
+			<artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
 		<dependency>
