--- a/tools/sos-webster/pom.xml
+++ b/tools/sos-webster/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
        	<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sos-env</artifactId>
+			<artifactId>sorcer-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
