--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -28,7 +28,7 @@ com.sun.jini.start {
     endPort = Booter.getWebsterEndPort();
 
     standardProviderCodebase = Booter.resolveCodebase(new String[]{
-        "org.sorcersoft.sorcer:sos-env",
+        "org.sorcersoft.sorcer:sorcer-api",
         "org.sorcersoft.sorcer:sos-api",
         "org.sorcersoft.sorcer:sos-netlet",
         "org.codehaus.groovy:groovy-all",
