--- a/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
@@ -13,7 +13,7 @@ com.sun.jini.start {
 			Booter.resolveCodebase(new String[]{
  			    "org.sorcersoft.sorcer:ju-arithmetic-api",
  			    "org.sorcersoft.sorcer:sos-platform",
- 			    "org.sorcersoft.sorcer:sos-env"
+ 			    "org.sorcersoft.sorcer:sorcer-api"
             }),
 			policy,
 			Booter.resolveClasspath(new String[] {
