--- a/tools/sorcer-rio/pom.xml
+++ b/tools/sorcer-rio/pom.xml
@@ -278,7 +278,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-env</artifactId>
+            <artifactId>sorcer-api</artifactId>
             <version>${v.sorcer}</version>
         </dependency>
     </dependencies>
