--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sos-env</artifactId>
+			<artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
 		<dependency>
