--- a/tools/sos-shell/pom.xml
+++ b/tools/sos-shell/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-env</artifactId>
+            <artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
