Inverted sorcer resolver priority in Hybrid resolver

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -681,7 +681,7 @@
                                     <tasks>
                                         <!-- Setup installer -->
                                         <copy todir="${staging.dir}/izpack">
-                                            <fileset dir="${basedir}/src/izpack">
+                                            <fileset dir="${basedir}/src/main/izpack">
                                                 <include name="**/*.xml"/>
                                                 <include name="**/*.html"/>
                                                 <include name="**/*.xml_*"/>
@@ -692,7 +692,7 @@
                                             </filterset>
                                         </copy>
                                         <copy todir="${staging.dir}/izpack">
-                                            <fileset dir="${basedir}/src/izpack">
+                                            <fileset dir="${basedir}/src/main/izpack">
                                                 <include name="**/*.png"/>
                                             </fileset>
                                         </copy>
@@ -721,37 +721,6 @@
                             </execution>
                         </executions>
                     </plugin>
-<!--
-                    <plugin>
-                        <groupId>org.codehaus.izpack</groupId>
-                        <artifactId>izpack-maven-plugin</artifactId>
-                        <version>1.0-alpha-5</version>
-
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>izpack</goal>
-                                </goals>
-                                <configuration>
-                                    <izpackBasedir>${staging.dir}/izpack</izpackBasedir>
-                                    &lt;!&ndash; base for relative paths in izpack descriptor &ndash;&gt;
-                                    &lt;!&ndash;<baseDir>${staging.dir}/izpack</baseDir>&ndash;&gt;
-                                    &lt;!&ndash;<installFile>${staging.dir}/izpack/install.xml</installFile>&ndash;&gt;
-                                    <installerFile>${project.build.directory}/sorcer-${project.version}-setup.jar
-                                    </installerFile>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.codehaus.izpack</groupId>
-                                <artifactId>izpack-standalone-compiler</artifactId>
-                                <version>${izpack.version}</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
--->
                 </plugins>
             </build>
         </profile>
