Fixed ClassCastException in reggie

--- a/configs/sorcer-boot-no-http.config
+++ b/configs/sorcer-boot-no-http.config
@@ -37,12 +37,9 @@ com.sun.jini.start {
     });
 
     serviceDescriptors = new ServiceDescriptor[] {
-	    new SorcerServiceDescriptor(
-	      	Booter.resolveCodebase("org.apache.river:reggie-dl"),
-            policy,
-            Booter.resolveClasspath("org.apache.river:reggie"),
-            "com.sun.jini.reggie.TransientRegistrarImpl",
-            new String[] { home + "/configs/jini/configs/reggie.config" }
+        // Start reggie using rio configuration
+        org.rioproject.util.ServiceDescriptorUtil.getLookup(policy,
+            new String[] { home+"/configs/rio/common.groovy",home + "/configs/rio/reggie.groovy" }
         ),
 
 		new SorcerServiceDescriptor(
