--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -46,14 +46,11 @@ com.sun.jini.start {
 			new String[] { home + "/configs/webster/configs/webster-prv.config" }
         ),
 
-	    new SorcerServiceDescriptor(
-	      	Booter.resolveCodebase2("org.apache.river:reggie-dl"),
-            policy,
-            Booter.resolveClasspath("org.apache.river:reggie"),
-            "com.sun.jini.reggie.TransientRegistrarImpl",
-            new String[] { home + "/configs/jini/configs/reggie.config" }
+        // Start reggie using rio configuration
+        org.rioproject.util.ServiceDescriptorUtil.getLookup(policy,
+            new String[] { home+"/configs/rio/common.groovy",home + "/configs/rio/reggie.groovy" }
         ),
-            
+
 		new SorcerServiceDescriptor(
             Booter.resolveCodebase2("org.apache.river:mahalo-dl"),
             policy,
