--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>logback-classic</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>${v.slf4j}</version>
+        </dependency>
+        <dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
