Fixes in shell config and startup on Mac and Win

--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -12,6 +12,7 @@
 ## load mvn://groupId:Artifact:[version] - specifies local jar file to loaded from local maven repository using artifact coordinates in the format:
 ## load mvn://groupId:Artifact:[version]@host:port - specifies a jar file on a remote maven repository
 ## load http:// - specifies remote jar file using a direct URL
+## load artifact:groupId/Artifact/version
 
 ## Examples of how you can specify a jar to be loaded
 ## Possible ways of specifying libraries
@@ -19,6 +20,7 @@
 ## load mvn://org.sorcersoft.sorcer:ex6-api@192.168.0.15:8000
 ## load http://192.168.0.15:9000/sorcer/sos-env.jar
 ## load file://!{user.home}/.nsh/lib/*.jar
+## load artifact:org.sorcersoft.sorcer/ex6-api/1.0-M3-SNAPSHOT
 
 ## You can also specify the codebase that will be shared for all scripts that you invoke, however,
 ## during the startup of the shell the internal webster is not yet running therefore only
@@ -41,6 +43,6 @@
     #load mvn://org.rioproject:rio-platform
 
     # load user specific libraries
-    load file://!{user.home}/.nsh/lib/*.jar
+    #load file://!{user.home}/.nsh/lib/*.jar
     
-	load mvn://com.sorcersoft.sorcer:sorcer-schema:1.0-M3-SNAPSHOT
+
