--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,11 @@
                 <artifactId>je</artifactId>
                 <version>${v.sleepycat}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>15.0</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
