--- a/tools/sorcer-launcher/pom.xml
+++ b/tools/sorcer-launcher/pom.xml
@@ -28,10 +28,17 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
