extract sorcer-resolver module from sorcer-api; move resolving code from InternalWebster to ResolvingWebster in commons-req; move resolving code from SorcerEnv to ServiceReqiestor; update linux scripts; cleanup sorcer-api dependencies;

--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -44,6 +44,11 @@
 			<version>${project.version}</version>
 		</dependency>
         <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-resolver</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-api</artifactId>
             <version>${v.rio}</version>
