--- a/tests/int-tests/pom.xml
+++ b/tests/int-tests/pom.xml
@@ -63,6 +63,12 @@
             <version>${project.version}</version>
         </dependency>
 		<dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>commons-req</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
