--- a/sos/sorcer-api/src/main/resources/META-INF/maven/groupversions.properties
+++ b/sos/sorcer-api/src/main/resources/META-INF/maven/groupversions.properties
@@ -1,6 +1,6 @@
 #the key is either groupId_artifactId or just the groupId
 net.jini = ${v.jini}
-net.jini.lookup = 2.1
+net.jini.lookup = ${v.jini}
 org.apache.river = ${v.jini}
 org.sorcersoft.blitz = ${v.blitz}
 org.sorcersoft.sigar = ${v.sigar}
