--- a/tools/sorcer-launcher/pom.xml
+++ b/tools/sorcer-launcher/pom.xml
@@ -22,12 +22,12 @@
             <artifactId>sos-util</artifactId>
             <version>${project.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.1</version>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-resolver</artifactId>
+            <version>${project.version}</version>
         </dependency>
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.5</version>
+            <version>${v.slf4j}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
