replace property names with constants; add child process monitoring

--- a/tools/sorcer-launcher/pom.xml
+++ b/tools/sorcer-launcher/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>tools</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
@@ -9,13 +10,26 @@
 
     <artifactId>sorcer-launcher</artifactId>
     <name>SORCER tools :: launcher</name>
-    <description>Helper classes for launching Sorcer server (provider) and client (requestor) processes; to be used by other Sorcer tools. Do not confuse it with sos-boot which contains classes internal to the server process, i.e. the main class for server (ServiceStarter) or with ServiceRequestor helper 'main' class for clients.</description>
+    <description>Helper classes for launching Sorcer server (provider) and client (requestor) processes; to be used by
+        other Sorcer tools. Do not confuse it with sos-boot which contains classes internal to the server process, i.e.
+        the main class for server (ServiceStarter) or with ServiceRequestor helper 'main' class for clients.
+    </description>
 
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.jini</groupId>
+                    <artifactId>jsk-lib</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
