Added sorcer-pkg that generates rpm and deb packages with sorcer, modified scripts to support that

--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -30,6 +30,7 @@
 		<!-- force download implicit dependencies -->
 		<module>dependencies</module>
         <module>sorcer-resolver</module>
+        <module>sorcer-pkg</module>
 	</modules>
 	<build>
 <!--	<plugins>
